--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -3,6 +3,7 @@ name: WhatsApp Bot
 on: [push]
 jobs:
   building:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
