--- a/package.json
+++ b/package.json
@@ -1,53 +1,45 @@
 {
-    "name": "Maria-Bot",
-    "version": "1.0.0",
-    "description": "WhatsApp Bot Using Nodejs",
-    "main": "index.js",
-    "type": "commonjs",
-    "directories": {
-        "lib": "lib",
-        "database": "database",
-        "database": "database",
-        "session": "session",
-        "media": "media"
-    },
-    "scripts": {
-        "start": "node index.js"
-    },
-    "author": "Ayush",
-    "license": "MIT",
-    "dependencies": {
-        "@whiskeysockets/baileys": "^6.5.0",
-        "@adiwajshing/keyed-db": "^0.2.4",
-        "@hapi/boom": "^10.0.1",
-        "awesome-phonenumber": "^5.9.0",
-        "axios": "^1.4.0",
-        "chalk": "^4.1.2",
-        "cheerio": "^1.0.0-rc.12",
-        "cookie": "^0.5.0",
-        "file-type": "^16.5.3",
-        "fluent-ffmpeg": "^2.1.2",
-        "form-data": "^4.0.0",
-        "fs-extra": "^11.1.1",
-        "google-it": "^1.6.2",
-        "google-tts-api": "^2.0.2",
-        "human-readable": "^0.2.1",
-        "jimp": "^0.16.13",
-        "jsdom": "^22.1.0",
-        "moment-timezone": "^0.5.43",
-        "node-fetch": "^2.6.11",
-        "node-id3": "^0.2.3",
-        "node-webpmux": "^3.1.7",
-        "node-youtube-music": "^0.8.3",
-        "performance-now": "^2.1.0",
-        "pino": "^8.14.1",
-        "qrcode": "^1.5.3",
-        "qrcode-reader": "^1.0.4",
-        "qrcode-terminal": "^0.12.0",
-        "set-cookie": "^0.0.4",
-        "translate-google-api": "^1.0.4",
-        "youtube-yts": "^2.0.0",
-        "ytdl-core": "^4.11.5",
-        "youtubedl-core": "^4.11.5"
-    }
+  "name": "nekoBot",
+  "version": "1.0.0",
+  "description": "- WhatsApp bot using Library Baileys",
+  "main": "index.js",
+  "directories": {
+    "lib": "lib"
+  },
+  "scripts": {
+    "start": "node index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Axel/nekoBot.git"
+  },
+  "keywords": [
+    "botwa"
+  ],
+  "author": "Axel_Team",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Axel/nekoBot/issues"
+  },
+  "homepage": "https://github.com/Axel/nekoBot#readme",
+  "dependencies": {
+    "awesome-phonenumber": "^7.2.0",
+    "baileys": "github:LT-SYAII/Bail",
+    "canvas": "^2.11.2",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0",
+    "chokidar": "^4.0.1",
+    "fluent-ffmpeg": "^2.1.3",
+    "jimp": "^0.22.12",
+    "js-beautify": "^1.15.1",
+    "moment-timezone": "^0.5.46",
+    "node-fetch": "npm:undici@^6.20.1",
+    "node-webpmux": "^3.2.0",
+    "pino": "^9.5.0",
+    "playwright": "^1.49.0",
+    "qs": "^6.13.1",
+    "undici": "^6.21.0",
+    "yt-search": "^2.12.1",
+    "ytdl-core": "npm:@distube/ytdl-core@^4.15.1"
+  }
 }
