--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with:
-          node-version: 'latest'
+          node-version: '20'
       - name: Installing
         run: npm i
       - name: Run Node Js
