--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -9,7 +9,8 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: '20'
+          cache: 'npm'
       - name: Installing
         run: npm i
       - name: Run Node Js
-        run: node plugins.js --pairing-code
+        run: node index
