--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Installing
         run: npm i
       - name: Run Node Js
-        run: node index
+        run: node index.js
