--- a/package.json
+++ b/package.json
@@ -1,45 +1,25 @@
 {
-  "name": "nekoBot",
-  "version": "1.0.0",
-  "description": "- WhatsApp bot using Library Baileys",
-  "main": "index.js",
-  "directories": {
-    "lib": "lib"
-  },
-  "scripts": {
+    "description": "qr",
+    "main": "index.js",
+  "engines" : { 
+    "npm" : ">=9.7.2",
+    "node" : ">=20.0.0"
+    },
+    "scripts": {
     "start": "node index.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Axel/nekoBot.git"
-  },
-  "keywords": [
-    "botwa"
-  ],
-  "author": "Axel_Team",
+  "author": "GlobalTechInfo",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Axel/nekoBot/issues"
-  },
-  "homepage": "https://github.com/Axel/nekoBot#readme",
+  "description": "",
   "dependencies": {
-    "awesome-phonenumber": "^7.2.0",
-    "baileys": "github:LT-SYAII/Bail",
-    "canvas": "^2.11.2",
-    "chalk": "^4.1.2",
-    "cheerio": "^1.0.0",
-    "chokidar": "^4.0.1",
-    "fluent-ffmpeg": "^2.1.3",
-    "jimp": "^0.22.12",
-    "js-beautify": "^1.15.1",
-    "moment-timezone": "^0.5.46",
-    "node-fetch": "npm:undici@^6.20.1",
-    "node-webpmux": "^3.2.0",
-    "pino": "^9.5.0",
-    "playwright": "^1.49.0",
-    "qs": "^6.13.1",
-    "undici": "^6.21.0",
-    "yt-search": "^2.12.1",
-    "ytdl-core": "npm:@distube/ytdl-core@^4.15.1"
-  }
+    "@whiskeysockets/baileys": "^6.6.0",
+    "qrcode": "^1.5.3",
+    "awesome-phonenumber": "^2.64.0",
+    "pino": "^8.1.0",
+    "phone" : "3.1.30",
+    "body-parser": "^1.20.1",
+    "pastebin-js": "^1.0.6",
+    "express": "^4.18.1",
+    "path": "^0.12.7"
+   }
 }
