--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -31,9 +31,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Running
+        run: npm test
       - name: Setup Pages
         uses: actions/configure-pages@v5
-        run: npm test
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
